No options to Import Seconds Picker dialog after publish to jitpack

--- a/secondspicker/build.gradle
+++ b/secondspicker/build.gradle
@@ -8,7 +8,7 @@ plugins {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'com.github.RedEyesNCode'
+            groupId = 'com.redeyesncode.secondspicker'
             artifactId = 'secondspicker'
             version = '1.0.0'
         }
