--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
-
+    id 'kotlin-android'
 }
 
 android {
@@ -54,7 +54,7 @@ dependencies {
 
     // Adding the local library dependency here.
 
-    implementation project(path: ':secondspicker')
+    implementation 'com.github.RedEyesNCode:SecondsPicker-Android77:1.0.0'
 
 
 
