--- a/secondspicker/build.gradle
+++ b/secondspicker/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
+    id 'kotlin-android'
 
 }
 publishing {
