--- a/secondspicker/build.gradle
+++ b/secondspicker/build.gradle
@@ -8,11 +8,7 @@ plugins {
 }
 publishing {
     publications {
-        mavenJava(MavenPublication) {
-            groupId = 'com.redeyesncode.secondspicker'
-            artifactId = 'secondspicker'
-            version = '1.0.0'
-        }
+        publishToMavenLocal
     }
 }
 android {
