--- a/secondspicker/build.gradle
+++ b/secondspicker/build.gradle
@@ -8,6 +8,12 @@ plugins {
 }
 publishing {
     publications {
+        mavenJava(MavenPublication) {
+            groupId = 'com.redeyesncode.secondspicker'
+            artifactId = 'secondspicker'
+            version = '1.0.3'
+
+        }
         publishToMavenLocal
     }
 }
@@ -53,7 +59,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
