--- a/secondspicker/build.gradle
+++ b/secondspicker/build.gradle
@@ -8,9 +8,9 @@ plugins {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'com.github.RedEyesNCode'
+            groupId = 'com.redeyesncode.secondspicker'
             artifactId = 'secondspicker'
-            version = '1.0.5'
+            version = '1.0.6'
         }
     }
 }
