--- a/secondspicker/build.gradle
+++ b/secondspicker/build.gradle
@@ -5,26 +5,7 @@ plugins {
     id 'maven-publish'
 
 }
-publishing {
-    publications {
-       /* mavenJava(MavenPublication) {
-            groupId = 'com.redeyesncode.secondspicker'
-            artifactId = 'secondspicker'
-            version = '1.0.6'
-        }*/
-        create(MavenPublication) {
-            groupId = "com.redeyesncode.secondspicker"
-            artifactId = "secondspicker"
-            version = "1.0.7"
-        }
 
-        /* mavenJava(MavenPublication) {
-            groupId = 'com.github.RedEyesNCode'
-            artifactId = 'secondspicker'
-            version = '1.0.0'
-        }*/
-    }
-}
 android {
     namespace 'com.redeyesncode.secondspicker'
     compileSdk 33
@@ -76,4 +57,17 @@ dependencies {
 
 
 
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = "com.redeyesncode.secondspicker"
+                artifactId = "secondspicker"
+                version = '1.0.8'
+            }
+        }
+    }
 }
